@@ -11,6 +11,8 @@
 #include "DataFormats/FEDRawData/interface/FEDNumbering.h"
 #include "FWCore/MessageLogger/interface/MessageLogger.h"
 
+#include <iostream>
+
 
 using namespace std;
 using namespace edm;
@@ -29,13 +31,22 @@ PlaybackRawDataProvider* PlaybackRawDataProvider::instance_=0;
 
 //______________________________________________________________________________
 PlaybackRawDataProvider::PlaybackRawDataProvider(const ParameterSet& iConfig)
-  : rawData_(0)
+  : queueSize_(0)
+  , eventQueue_(0)
   , runNumber_(0)
   , evtNumber_(0)
   , count_(0)
+  , writeIndex_(0)
+  , readIndex_(0)
 {
-  sem_init(&mutex1_,0,1);
-  sem_init(&mutex2_,0,0);
+  queueSize_=iConfig.getUntrackedParameter<unsigned int>("QueueSize",128);
+  sem_init(&lock_,0,1);
+  sem_init(&writeSem_,0,queueSize_);
+  sem_init(&readSem_,0,0);
+  runNumber_ =new unsigned int[queueSize_];
+  evtNumber_ =new unsigned int[queueSize_];
+  eventQueue_=new FEDRawDataCollection*[queueSize_];
+  for (unsigned int i=0;i<queueSize_;i++) eventQueue_[i]=0;
   instance_=this;
 }
 
@@ -43,6 +54,13 @@ PlaybackRawDataProvider::PlaybackRawDataProvider(const ParameterSet& iConfig)
 //______________________________________________________________________________
 PlaybackRawDataProvider::~PlaybackRawDataProvider()
 {
+  if (0!=runNumber_) delete [] runNumber_;
+  if (0!=evtNumber_) delete [] evtNumber_;
+  if (0!=eventQueue_) {
+    for (unsigned int i=0;i<queueSize_;i++)
+      if (0!=eventQueue_[i]) delete eventQueue_[i];
+    delete [] eventQueue_;
+  }
   instance_=0;
 }
 
@@ -53,38 +71,41 @@ PlaybackRawDataProvider::~PlaybackRawDataProvider()
 
 //______________________________________________________________________________
 void PlaybackRawDataProvider::analyze(const Event& iEvent,
-				    const EventSetup& iSetup)
+				      const EventSetup& iSetup)
 {
-  sem_wait(&mutex1_);
-
-  runNumber_=iEvent.id().run();
-  evtNumber_=iEvent.id().event();
+  waitWriteSem();
+  
+  runNumber_[writeIndex_]=iEvent.id().run();
+  evtNumber_[writeIndex_]=iEvent.id().event();
 
   Handle<FEDRawDataCollection> pRawData;
   iEvent.getByType(pRawData);
   
   if (!pRawData.isValid()) {
-    edm::LogError("***")<<"no raw data found!"<<endl;
+    edm::LogError("InvalidHandle")<<"no raw data found!"<<endl;
     return;
   }
   
-  if (0!=rawData_) delete rawData_;
   
   // copy the raw data collection into rawData_, retrievable via getFEDRawData()
-  rawData_=new FEDRawDataCollection();
+  assert(0==eventQueue_[writeIndex_]);
+  eventQueue_[writeIndex_]=new FEDRawDataCollection();
   for (unsigned int i=0;i<(unsigned int)FEDNumbering::lastFEDId()+1;i++) {
     unsigned int fedSize=pRawData->FEDData(i).size();
     if (fedSize>0) {
-      FEDRawData& fedData=rawData_->FEDData(i);
+      FEDRawData& fedData=eventQueue_[writeIndex_]->FEDData(i);
       fedData.resize(fedSize);
       memcpy(fedData.data(),pRawData->FEDData(i).data(),fedSize);
     }
   }
-
-  count_++;
-
-  sem_post(&mutex2_);
   
+  lock();
+  writeIndex_=(writeIndex_+1)%queueSize_;
+  count_++;
+  unlock();
+  
+  postReadSem();
+
   return;
 }
 
@@ -99,19 +120,22 @@ void PlaybackRawDataProvider::beginJob(const EventSetup&)
 //______________________________________________________________________________
 void PlaybackRawDataProvider::endJob()
 {
-  
+  edm::LogInfo("Summary")<<count_<<" events read."<<endl;
 }
 
 
 //______________________________________________________________________________
 FEDRawDataCollection* PlaybackRawDataProvider::getFEDRawData()
 {
-  sem_wait(&mutex2_);
+  waitReadSem();
+
+  lock();
+  FEDRawDataCollection* result=eventQueue_[readIndex_];
+  eventQueue_[readIndex_]=0;
+  readIndex_=(readIndex_+1)%queueSize_;
+  unlock();
   
-  FEDRawDataCollection* result=rawData_;
-  rawData_=0;
-  
-  sem_post(&mutex1_);
+  postWriteSem();
   
   return result;
 }
@@ -119,18 +143,41 @@ FEDRawDataCollection* PlaybackRawDataProvider::getFEDRawData()
 
 //______________________________________________________________________________
 FEDRawDataCollection* PlaybackRawDataProvider::getFEDRawData(unsigned int& runNumber,
-							   unsigned int& evtNumber)
+							     unsigned int& evtNumber)
 {
-  sem_wait(&mutex2_);
+  waitReadSem();
+
+  lock();
   
-  runNumber=runNumber_;
-  evtNumber=evtNumber_;
-  FEDRawDataCollection* result=rawData_;
-  rawData_=0;
+  runNumber=runNumber_[readIndex_];
+  evtNumber=evtNumber_[readIndex_];
+  FEDRawDataCollection* result=eventQueue_[readIndex_];
+  assert(0!=result);
+  eventQueue_[readIndex_]=0;
+  readIndex_=(readIndex_+1)%queueSize_;
+
+  unlock();
   
-  sem_post(&mutex1_);
+  postWriteSem();
   
   return result;
+}
+
+
+//______________________________________________________________________________
+void PlaybackRawDataProvider::sem_print()
+{
+  lock();
+  int wsem,rsem;
+  sem_getvalue(&writeSem_,&wsem);
+  sem_getvalue(&readSem_,&rsem);
+  cout<<"sem_print():"
+      <<" wsem="<<wsem
+      <<" rsem="<<rsem
+      <<" writeIndex="<<writeIndex_
+      <<" readIndex="<<readIndex_
+      <<endl;
+  unlock();
 }
 
 
